--- a/age calculator/style/index.css
+++ b/age calculator/style/index.css
@@ -13,8 +13,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(1 53 17);
+    background-color: #003049;
     height: 100vh;
+    background: url(../images/top-view-desk-concept-with-notepad.jpg) no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .container {
@@ -23,7 +26,7 @@ body {
     gap: 20px;
     padding: 20px;
     border-radius: 5px;
-    width: 35%;
+    width: 40%;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 5px 1px black;
 
@@ -31,6 +34,8 @@ body {
 
 .container input {
     width: 100%;
+    height: 5vh;
+    font-size: 1rem;
 }
 
 .container button {
@@ -40,6 +45,7 @@ body {
     border-radius: 5px;
     border: none;
     padding: 10px;
+    cursor: pointer;
 }
 
 .container .details {
@@ -52,7 +58,7 @@ body {
 
 h4,
 span {
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight: 500;
     color: rgb(28 28 28);
 }
@@ -63,3 +69,28 @@ span {
    margin: 0 auto;
     
 }
+
+
+@media screen and (max-width:600px) {
+
+    body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(1 53 17);
+    height: 100vh;
+    padding: 10px;
+}
+
+    .container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 5px 1px black;
+}
+}
+
