--- a/style/index.css
+++ b/style/index.css
@@ -1,42 +1,45 @@
-
-
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: rgb(255, 255, 255);
 }
-section{
+
+section {
     padding: 40px;
 }
-h1{
+
+h1 {
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 40px;
 }
 
-.container{
-   
+.container {
+
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
     gap: 20px;
 }
 
-.container .box{
+.container .box {
     position: relative;
-    height: 60vh;
-    
+    height: 80vh;
+
     box-shadow: 0px 0px 10px 2px black;
 }
-.container .box img{
-   width: 100%;
-   height: 100%;
-   object-fit: cover;
+
+.container .box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-.container .box .content{
+
+.container .box .content {
     position: absolute;
     bottom: 0;
     display: flex;
@@ -46,10 +49,24 @@ h1{
     padding: 30px;
     text-align: center;
     width: 100%;
-    
+
 }
 
-a{
+a {
     text-decoration: none;
     color: rgb(0, 60, 255);
+}
+
+
+@media screen and (max-width:600px) {
+
+    section {
+        padding: 30px;
+    }
+
+    .container {
+    display: grid;
+    grid-template-columns: none;
+    gap: 20px;
+}
 }
