--- a/task 20 (archery target using transform)/style/style.css
+++ b/task 20 (archery target using transform)/style/style.css
@@ -7,19 +7,21 @@
 }
 
 
-h2{
-     font-family: "Bungee Spice", sans-serif;
-  font-weight: 400;
+h2 {
+    font-family: "Bungee Spice", sans-serif;
+    font-weight: 400;
 }
-span{
+
+span {
     font-size: 30px;
-     font-family: "Rajdhani", sans-serif;
-  font-weight: 800;
-  color: white;
+    font-family: "Rajdhani", sans-serif;
+    font-weight: 800;
+    color: white;
 }
-h3{
-      font-family: "Bruno Ace SC", sans-serif;
-  font-weight: 400;
+
+h3 {
+    font-family: "Bruno Ace SC", sans-serif;
+    font-weight: 400;
     color: yellow;
 }
 
@@ -27,7 +29,7 @@ h3{
 .container {
     position: relative;
 
-      background-image: url(../image/../image/nature\ background.jpg);
+    background-image: url(../image/../image/nature\ background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -35,7 +37,7 @@ h3{
     position: relative;
     justify-content: space-between;
     align-items: center;
- 
+
     height: 100vh;
 }
 
@@ -52,11 +54,11 @@ h3{
 }
 
 
-.man{
+.man {
     z-index: 1;
     right: 0;
-    
-   
+
+
     top: 30%;
     position: absolute;
     transition: 1s;
@@ -67,6 +69,7 @@ h3{
     background-size: contain;
     background-position: center;
 }
+
 .arrow {
     position: absolute;
     right: 90px;
@@ -80,11 +83,11 @@ h3{
 }
 
 
-.arrow2{
+.arrow2 {
     position: absolute;
     right: 90px;
-   
-   top: 30.5%;
+
+    top: 30.5%;
     width: 180px;
     height: 300px;
     background-image: url(../image/right.png);
@@ -92,21 +95,23 @@ h3{
     background-size: contain;
     background-position: center;
 }
- .shoot1{
-   transform: translate(-1000px,-40px);
-     transition: 0.5s;
+
+.shoot1 {
+    transform: translate(-1000px, -40px);
+    transition: 0.5s;
 }
 
- .shoot2{
-    transform: translate(-1000px,30px);
-     transition: 0.5s;
-}
-.shoot3{
-     transform: translate(-1000px,-7px);
-     transition: 0.5s;
+.shoot2 {
+    transform: translate(-1000px, 30px);
+    transition: 0.5s;
 }
 
-.return{
+.shoot3 {
+    transform: translate(-1000px, -7px);
+    transition: 0.5s;
+}
+
+.return {
     right: 20px;
     position: absolute;
     width: 300px;
@@ -117,9 +122,9 @@ h3{
     background-position: center;
 }
 
-.button{
+.button {
     position: absolute;
-    right:30%;
+    right: 30%;
     bottom: 10%;
     border-radius: 10px;
     border: none;
@@ -129,30 +134,31 @@ h3{
     width: 100px;
     height: 100px;
 }
-.button img{
+
+.button img {
     width: 100%;
     height: 100%;
     object-fit: contain;
 }
 
-.reset img{
+.reset img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.reset{
-      right: 20%;
+.reset {
+    right: 20%;
     bottom: 10%;
 }
 
-.blink{
+.blink {
     filter: drop-shadow(0px 0px 2px red);
     box-shadow: 0px 0px 10px 5px rgb(115, 3, 3);
 }
 
 
-.rangefix{
+.rangefix {
     position: absolute;
     top: 5px;
     right: 5px;
@@ -164,18 +170,19 @@ h3{
     width: 20%;
     height: 20%;
 }
-.rangefix .range{
+
+.rangefix .range {
     color: white;
     border-radius: 30px;
-  
+
     text-align: center;
     background-color: rgba(0, 0, 0, 0.693);
     width: 100px;
     height: 20px;
 }
 
-.shortrange{
-     position: absolute;
+.shortrange {
+    position: absolute;
     top: 30%;
     left: 40%;
     width: 400px;
@@ -186,47 +193,54 @@ h3{
     background-position: center;
 }
 
-.shortshoot1{
-     transform: translate(-400px,-7px);
-     transition: 0.5s;
+.shortshoot1 {
+    transform: translate(-400px, -7px);
+    transition: 0.5s;
 }
-.shortshoot2{
-     transform: translate(-400px,-7px);
-     transition: 0.5s;
+
+.shortshoot2 {
+    transform: translate(-400px, -7px);
+    transition: 0.5s;
 }
-.shortshoot3{
-     transform: translate(-400px,-7px);
-     transition: 0.5s;
+
+.shortshoot3 {
+    transform: translate(-400px, -7px);
+    transition: 0.5s;
 }
 
 
-.mediumshoot1{
-     transform: translate(-700px,-30px);
-     transition: 0.5s;
-}
-.mediumshoot2{
-     transform: translate(-700px,-7px);
-     transition: 0.5s;
-}
-.mediumshoot3{
-     transform: translate(-700px,-7px);
-     transition: 0.5s;
-}
-.longshoot1{
-      transform: translate(-1000px,-40px);
-     transition: 0.5s;
-}
-.longshoot2{
-     transform: translate(-1000px,30px);
-     transition: 0.5s;
-}
-.longshoot3{
-      transform: translate(-1000px,-7px);
-     transition: 0.5s;
+.mediumshoot1 {
+    transform: translate(-700px, -30px);
+    transition: 0.5s;
 }
 
-.mediumrange{
-     position: absolute;
+.mediumshoot2 {
+    transform: translate(-700px, -7px);
+    transition: 0.5s;
+}
+
+.mediumshoot3 {
+    transform: translate(-700px, -7px);
+    transition: 0.5s;
+}
+
+.longshoot1 {
+    transform: translate(-1000px, -40px);
+    transition: 0.5s;
+}
+
+.longshoot2 {
+    transform: translate(-1000px, 30px);
+    transition: 0.5s;
+}
+
+.longshoot3 {
+    transform: translate(-1000px, -7px);
+    transition: 0.5s;
+}
+
+.mediumrange {
+    position: absolute;
     top: 30%;
     left: 20%;
     width: 400px;
@@ -238,7 +252,7 @@ h3{
 }
 
 
-    /* .longrange{
+/* .longrange{
         position: absolute;
         top: 30%;
         left: 0;
@@ -253,16 +267,16 @@ h3{
 
 
 
-.blink2{
-   
-    animation: blink 1s  infinite   alternate ;
+.blink2 {
+
+    animation: blink 1s infinite alternate;
 }
 
 
 /* ---------------background bgm ------------*/
 
 
-.speaker{
+.speaker {
     position: absolute;
     display: flex;
     justify-content: space-around;
@@ -270,7 +284,8 @@ h3{
     left: 20px;
     width: 20%;
 }
-.sp{
+
+.sp {
     background-color: rgba(0, 0, 0, 0.596);
     padding: 10px;
     border-radius: 50%;
@@ -278,34 +293,94 @@ h3{
     display: flex;
     align-items: center;
     justify-content: center;
-   
+
 }
 
-.speaker i{
+.speaker i {
     color: white;
-   font-size: 40px;
+    font-size: 40px;
 }
+
 @keyframes blink {
-    10%{
-         filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
+    10% {
+        filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
         box-shadow: 0px 0px 10px 5px rgb(255, 255, 255);
     }
-    20%{
-         filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
+
+    20% {
+        filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
         box-shadow: 0px 0px 20px 5px rgb(255, 255, 255);
     }
 
-    50%{
-         filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
+    50% {
+        filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
         box-shadow: 0px 0px 50px 5px rgb(255, 255, 255);
     }
-    80%{
-         filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
+
+    80% {
+        filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
         box-shadow: 0px 0px 20px 5px rgb(255, 255, 255);
     }
 
-    100%{
-         filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
+    100% {
+        filter: drop-shadow(0px 0px 2px rgb(255, 255, 255));
         box-shadow: 0px 0px 20px 5px rgb(255, 255, 255);
     }
+}
+
+
+
+
+@media screen and (max-width:700px) {
+
+    .archery {
+        position: absolute;
+        top: 30%;
+        left: 0;
+        width: 200px;
+        height: 300px;
+        background-image: url(../image/../image/table.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    .man {
+        z-index: 1;
+        right: 0;
+        top: 30%;
+        position: absolute;
+        transition: 1s;
+        width: 191px;
+        height: 300px;
+
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+    }
+
+    .arrow {
+        position: absolute;
+        right: 90px;
+        top: 30.5%;
+        width: 100px;
+        height: 100px;
+        background-image: url(../image/right.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+    }
+
+    .button {
+    position: absolute;
+    right: 30%;
+    bottom: 10%;
+    border-radius: 10px;
+    border: none;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.499);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
 }
